Fixed issue with About popup not being highest element by z-index

--- a/EotE_Encounter/wwwroot/css/site.css
+++ b/EotE_Encounter/wwwroot/css/site.css
@@ -135,7 +135,7 @@ a:hover{
     -webkit-box-shadow: 0 0 10px 1px #4f8cef;
     -moz-box-shadow: 0 0 10px 1px #4f8cef;
     box-shadow: 0 0 10px 1px #4f8cef;
-    z-index: 100;
+    z-index: 25;
 }
 #character-container h3 {
     margin-top: 0;
